--- a/jogo.html
+++ b/jogo.html
@@ -80,7 +80,7 @@
                     </ul>
                 </div>
                 <div>
-                    <h3>Venha ate nós</h3>
+                    <h3>Venha até nós</h3>
                     <p>
                         Rua javascript n° 124, vila html - São Paulo - SP.
                     </p>
